<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SportFinderApp</string>
    <string name="home_bottom_nav_title">Home</string>
    <string name="search_bottom_nav_title">Search</string>
    <string name="chat_bottom_nav_title">Chat</string>
    <string name="add_training">add training</string>
    <string name="archive">Archive</string>
    <string name="mute">Mute</string>
    <string name="pin">Pin</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="list_of_trainings">List of trainings</string>
    <string name="enroll">Enroll</string>

    <string-array name="days">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_images">All images</string>
    <string name="view_all">View all</string>
    <string name="sport_page_description">Description</string>
    <string name="description_test">We want to highlight that this patch is dedicated to the memory of Kevin Lloyd, QA Functionality Tester. He will be immortalised in-game with a starting hero for the Vampire Counts (Sylvania factions) named Kevon Lloydstein, with some special traits that represent the man himself. This dedication comes from his family: “For Kevin, a loving husband, father, son and br other. We will always remember how y ou followed you r dreams in life and work, your passion for games and Warhammer. So happy you found your place. You will be forever missed.” To Kevin!</string>
    <string name="more">more</string>
    <string name="apply">apply</string>
    <string name="available_places">Available_places places: %s</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="login">SignIn</string>
    <string name="full_name">Full name</string>
    <string name="password_requirements">Between 8 and 72 characters</string>
    <string name="join">Join</string>
    <string name="already_have_account">Already have account?</string>
    <string name="log_in">Log in</string>
    <string name="show_password">Show password</string>
    <string name="reset_password">Reset password</string>
    <string name="new_to_sportfinder">New to SportFinder?</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign In</string>
    <string name="check_email_text">Check your mail and follow the instructions</string>
    <string name="email_verification_error">Please verify email</string>
    <string name="email_verification_again">Do you want a verification email to be resent to your email?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>