<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".presentation.fragments.sport.SportFragment">

        <TextView
            android:id="@+id/sport_page_title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/app_name"
            android:textSize="24sp"

            android:textStyle="bold"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sport_page_coach_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toTopOf="@id/sport_page_features_sw"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sport_page_title_tv" />

        <TextView
            android:id="@+id/sport_page_coach_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:gravity="center_vertical"
            android:text="@string/app_name"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@id/sport_page_coach_iv"
            app:layout_constraintLeft_toRightOf="@id/sport_page_coach_iv"
            app:layout_constraintTop_toTopOf="@id/sport_page_coach_iv" />

        <HorizontalScrollView
            android:id="@+id/sport_page_features_sw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="8dp"
            android:scrollbars="none"
            app:layout_constraintBottom_toTopOf="@id/sport_page_enroll_button"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sport_page_coach_iv">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">

                <ImageView
                    android:id="@+id/sport_page_type_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_pin" />

                <TextView
                    android:id="@+id/sport_page_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:gravity="start"
                    android:text="4.6" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?color" />

                <ImageView
                    android:id="@+id/sport_page_rating_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_pin" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?color" />

                <ImageView
                    android:id="@+id/sport_page_level_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:src="@drawable/ic_pin" />

                <TextView
                    android:id="@+id/sport_page_level_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="Begginer" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="?color" />

                <ImageView
                    android:id="@+id/sport_page_students_count_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_pin" />

                <TextView
                    android:id="@+id/sport_page_students_count_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:lines="1"
                    android:text="18556165161616516" />

            </LinearLayout>

        </HorizontalScrollView>

        <Button
            android:id="@+id/sport_page_enroll_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="24dp"
            android:text="@string/enroll"
            app:layout_constraintBottom_toTopOf="@id/sport_page_show_all_images"
            app:layout_constraintTop_toBottomOf="@id/sport_page_features_sw" />

        <TextView
            android:id="@+id/sport_page_show_all_images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/view_all"
            android:textColor="?colorSecondary"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sport_page_enroll_button" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sport_page_image_rw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sport_page_show_all_images">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/sport_page_description_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/sport_page_description"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sport_page_image_rw" />

        <TextView
            android:id="@+id/sport_page_full_description_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/more"
            android:textColor="?colorSecondary"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/sport_page_description_tv"/>

        <TextView
            android:id="@+id/sport_page_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="4dp"
            android:text="sfde"
            android:textSize="13sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sport_page_description_title_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>